@@ -41,13 +41,38 @@
 			<div style="clear:both;"></div>
 		</div>
 		<div class="col6 right last">
-        {foreach from=$settings item=setting}
-            <div class="form">
-                <label class="field">{$setting->title}:</label>
-                {assign var=val value=$user->getSetting($setting->name)}
-                {$setting->getEditForm($val)}
-            </div>
-        {/foreach}
+			<div class="form">
+				<label class="field">Main character:</label>
+				<label id="maincharacter" class="value">
+					<select name="maincharacter">
+						<option value="0"></option>
+					{foreach from=$App->user->getAuthorizedCharacters() item=char}
+						<option value="{$char->id}" {if $char->id == $App->user->getMainCharacterID()}selected{/if}>
+							{$char->name}
+						</option>
+					{/foreach}
+					</select>
+				</label>
+			</div>
+			<div class="form">
+				<label class="field">Dedicated scanning character:</label>
+				<label class="value">
+					<select name="setting[scanalt]">
+						<option value="0"></option>
+					{foreach from=$App->user->getAuthorizedCharacters() item=char}
+						<option value="{$char->id}" {if $char->id == $App->user->getSetting("scanalt")}selected{/if}>
+							{$char->name}
+						</option>
+					{/foreach}
+					</select>
+				</label>
+			</div>
+			<div class="form">
+				<label class="field">Jump Drive Calibration Lvl:</label>
+				<label class="value">
+					<input name="setting[jumpdrivecal]" value="{$App->user->getSetting("jumpdrivecal")}" type="text" style="width: 50px;">
+				</label>
+			</div>
 			<div style="clear:both;"></div>
 		</div>
 		<div style="clear:both;"></div>
